Update: convert python icon into course icon

--- a/exchanger/resources/error_body.html
+++ b/exchanger/resources/error_body.html
@@ -8,7 +8,7 @@
     <tbody>
     <tr>
         <td valign="top">
-            Hello from the Python course robots!
+            Hello from the course robots!
             <p style="font-family: sans-serif;
                -webkit-font-smoothing: antialiased; font-size: 14px;
                line-height: 24px; color: #333333; -ms-text-size-adjust: 100%;
