--- a/exchanger/resources/template.html
+++ b/exchanger/resources/template.html
@@ -57,10 +57,10 @@
                                                        -webkit-font-smoothing: antialiased; font-size: 14px; -ms-text-size-adjust: 100%;
                                                        -webkit-text-size-adjust: 100%; margin-top: 8px; margin-bottom: 16px;">
                                             <tr>
-                                                <td><img alt="Python icon"
+                                                <td><img alt="Course icon"
                                                          class="header-icon"
                                                          height="48"
-                                                         src="{python_icon}"
+                                                         src="{course_icon}"
                                                          style="border: none; -ms-interpolation-mode: bicubic;
                                                                  display: block; padding-right: 16px; width: 48px; height: 48px;"
                                                          width="48"></td>
